// Copyright the Hyperledger Fabric contributors. All rights reserved.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";


option go_package = "hyperledger_project/TxAggregator/protos";

package protos;




service Aggregator {
    rpc ReceiveTaggedTransaction(TaggedTransaction) returns (TaggedTransactionResponse);
}

message TaggedTransaction {

    // chaincode function name
    string functionname = 1;

    // chaincode key
    string key = 2;

    // chaincode fieldname for aggregate
    string fieldname = 3;
    // operator
    int32 operator = 4;
    // operand only numeric
    int32 operand = 5;
    // precondition
    int32 precondition = 6;
    // postcondition
    int32 postcondition = 7;        
}

message TaggedTransactionResponse {

    // A response message indicating whether the
    // endorsement of the action was successful
    int32 response = 1;

    // The payload of response. It is the bytes of ProposalResponsePayload
    bytes payload = 2;

}

